--- a/index.html
+++ b/index.html
@@ -1,25 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title></title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+      <title></title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+      <!-- Bootstrap -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+      <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Ashleigh Ekari</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="top-nav">
+        
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link1</a></li>
+          <li><a href="#">Link2</a></li>
+          <li><a href="#">Link3</a></li>
+        </ul>
+      </div> <!-- /.navbar-collapse-->
+  </div> <!-- /.container-fluid-->
+  </nav>
+
+  <div class="container-fluid">
+      <div class="jumbotron mainjumbotron">
+        <h1 id="main-header">Front End Showcase</h1>
+        <!--
+        <button type="button" class="btn btn-primary btn-lg">Primary</button>
+        -->
+        <p>These are examples of web apps I've created</p>
+    </div> <!-- /.jumbotron-->
+
+    <h2>Things I've Learned</h2>
+    
+    <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h3>HTML</h3>
+        </div><!-- /.col -->
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h3>CSS</h3>
+        </div><!-- /.col -->
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h3>JS</h3>
+        </div><!-- /.col -->
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h3>Framworks</h3>
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="container-fluid text-center">
+      <h2>Random Gif Generator</h2>
+      <button type="button" class="btn btn-primary btn-lg" id="random-gif-btn">Show Random Gif!</button>
+
+      <br>
+      <br>
+
+      <div id="random-gif-container" class= "img-output">
+      </div><!-- /.container-->
+  </div><!-- /.container-->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
